--- a/index.html
+++ b/index.html
@@ -8,7 +8,94 @@
 </head>
 
 <body>
+  <div class="serviceform">
+    <h2>Elevation |  Google API</h2>
+    <i>https://maps.googleapis.com/maps/api/elevation/json</i>
+    <hr/>
 
+    <div class="form-group">
+      <input type="text" class="form-control" id="latitudElevation" placeholder="Latitud">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" id="longitudElevation" placeholder="Longitud">
+    </div>
+
+    <button class="btn btn-success" id="buttonElevation">Lanzar</button>
+    <br/> <br/>
+    <b>Resultado :</b>
+    <div id="resultadoelevation"></div>
+  </div>
+
+  <div class="serviceform">
+    <h2>Distance Matrix |  Google API</h2>
+    <i>https://maps.googleapis.com/maps/api/distancematrix/json</i>
+    <hr/>
+
+    <div class="form-group">
+      <input type="text" class="form-control" id="posiOrigenLat" placeholder="Origen: Latitud">
+      <input type="text" class="form-control" id="posiOrigenLng" placeholder="Origen: Longitud">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" id="posiDestinoLat" placeholder="Destino : Latitud">
+      <input type="text" class="form-control" id="posiDestinoLng" placeholder="Destino : Longitud">
+    </div>
+
+    <button class="btn btn-success" id="buttonDistanceMatrix">Lanzar</button>
+    <br/> <br/>
+    <b>Resultado :</b>
+    <div id="resultadoDistanceMatrix"></div>
+  </div>
+
+  <div class="serviceform">
+    <h2>Links by location | HPGloe API</h2>
+    <font color="red"><b>NO FUNCIONA por motivos de seguridad - Access-Control-Allow-Origin , no soport JSONP</b></font>
+    <i>http://www.hpgloe.com/json/getrec/</i>
+    <hr/>
+
+    <div class="form-group">
+      <input type="text" class="form-control" id="latitudLinks" placeholder="Latitud">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" id="longitudLinks" placeholder="Longitud">
+    </div>
+
+    <button class="btn btn-success" id="buttonHPGloe">Lanzar</button>
+    <br/> <br/>
+    <b>Resultado :</b>
+    <div id="resultadoHPGloe"></div>
+
+  </div>
+
+  <div class="serviceform">
+    <h2>Photos by location | Flickr API</h2>
+    <i>http://api.flickr.com/services/rest/</i>
+    <br/>
+    <div class="form-group">
+      <input type="text" class="form-control" id="esquinaIzquierda" placeholder="Left-bottom corner : Lat,Long" />
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" id="esquinaDerecha" placeholder="Right-top corner : Lat,Long" />
+    </div>
+
+    <button class="btn btn-success" id="buttonFlickr">Lanzar</button>
+    <br/><br/>
+    <b>Resultado :</b>
+    <div id="resultadoFlickr"></div>
+  </div>
+
+  <div class="serviceform">
+    <h2>Geolocation | Google API</h2>
+    <i>https://maps.google.com/maps/api/geocode/json</i>
+    <br/>
+    <div class="form-group">
+      <input type="text" class="form-control" id="inputGeolocation" placeholder="Address or Lat,Lon" />
+    </div>
+
+    <button class="btn btn-success" id="buttonGeo">Lanzar</button>
+    <br/><br/>
+    <b>Resultado :</b>
+    <div id="resultadoGeo"></div>
+  </div>
   <div class="panel-footer">
     <p>Created by Stewart ilondanga <em>copyright 2017</em></p>
 </body>
