--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <input type="text" class="form-control" id="longitudElevation" placeholder="Longitud">
     </div>
 
-    <button class="btn btn-success" id="buttonElevation">Lanzar</button>
+    <button class="btn btn-success" id="buttonElevation">Display</button>
     <br/> <br/>
-    <b>Resultado :</b>
+    <b>Results :</b>
     <div id="resultadoelevation"></div>
   </div>
 
@@ -40,9 +40,9 @@
       <input type="text" class="form-control" id="posiDestinoLng" placeholder="Destino : Longitud">
     </div>
 
-    <button class="btn btn-success" id="buttonDistanceMatrix">Lanzar</button>
+    <button class="btn btn-success" id="buttonDistanceMatrix">Display</button>
     <br/> <br/>
-    <b>Resultado :</b>
+    <b>Results :</b>
     <div id="resultadoDistanceMatrix"></div>
   </div>
 
@@ -59,9 +59,9 @@
       <input type="text" class="form-control" id="longitudLinks" placeholder="Longitud">
     </div>
 
-    <button class="btn btn-success" id="buttonHPGloe">Lanzar</button>
+    <button class="btn btn-success" id="buttonHPGloe">Display</button>
     <br/> <br/>
-    <b>Resultado :</b>
+    <b>Results :</b>
     <div id="resultadoHPGloe"></div>
 
   </div>
@@ -77,9 +77,9 @@
       <input type="text" class="form-control" id="esquinaDerecha" placeholder="Right-top corner : Lat,Long" />
     </div>
 
-    <button class="btn btn-success" id="buttonFlickr">Lanzar</button>
+    <button class="btn btn-success" id="buttonFlickr">Display</button>
     <br/><br/>
-    <b>Resultado :</b>
+    <b>Results :</b>
     <div id="resultadoFlickr"></div>
   </div>
 
@@ -91,9 +91,9 @@
       <input type="text" class="form-control" id="inputGeolocation" placeholder="Address or Lat,Lon" />
     </div>
 
-    <button class="btn btn-success" id="buttonGeo">Lanzar</button>
+    <button class="btn btn-success" id="buttonGeo">Display</button>
     <br/><br/>
-    <b>Resultado :</b>
+    <b>Results :</b>
     <div id="resultadoGeo"></div>
   </div>
   <div class="panel-footer">
