--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <hr/>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="latitudElevation" placeholder="Latitud">
+      <input type="text" class="form-control" id="latitudElevation" placeholder="Latitude">
     </div>
     <div class="form-group">
-      <input type="text" class="form-control" id="longitudElevation" placeholder="Longitud">
+      <input type="text" class="form-control" id="longitudElevation" placeholder="Longitude">
     </div>
 
     <button class="btn btn-success" id="buttonElevation">Display</button>
@@ -32,12 +32,12 @@
     <hr/>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="posiOrigenLat" placeholder="Origen: Latitud">
-      <input type="text" class="form-control" id="posiOrigenLng" placeholder="Origen: Longitud">
+      <input type="text" class="form-control" id="posiOrigenLat" placeholder="Origen: Latitude">
+      <input type="text" class="form-control" id="posiOrigenLng" placeholder="Origen: Longitude">
     </div>
     <div class="form-group">
-      <input type="text" class="form-control" id="posiDestinoLat" placeholder="Destino : Latitud">
-      <input type="text" class="form-control" id="posiDestinoLng" placeholder="Destino : Longitud">
+      <input type="text" class="form-control" id="posiDestinoLat" placeholder="Destino : Latitude">
+      <input type="text" class="form-control" id="posiDestinoLng" placeholder="Destino : Longitude">
     </div>
 
     <button class="btn btn-success" id="buttonDistanceMatrix">Display</button>
@@ -48,15 +48,15 @@
 
   <div class="serviceform">
     <h2>Links by location | HPGloe API</h2>
-    <font color="red"><b>NO FUNCIONA por motivos de seguridad - Access-Control-Allow-Origin , no soport JSONP</b></font>
+    <font color="red"><b> Access-Control-Allow-Origin </b></font>
     <i>http://www.hpgloe.com/json/getrec/</i>
     <hr/>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="latitudLinks" placeholder="Latitud">
+      <input type="text" class="form-control" id="latitudLinks" placeholder="Latitude">
     </div>
     <div class="form-group">
-      <input type="text" class="form-control" id="longitudLinks" placeholder="Longitud">
+      <input type="text" class="form-control" id="longitudLinks" placeholder="Longitude">
     </div>
 
     <button class="btn btn-success" id="buttonHPGloe">Display</button>
