--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <hr/>
 
     <div class="form-group">
-      <input type="text" class="form-control" id="posiOrigenLat" placeholder="Origen: Latitude">
-      <input type="text" class="form-control" id="posiOrigenLng" placeholder="Origen: Longitude">
+      <input type="text" class="form-control" id="posiOrigenLat" placeholder="Current: Latitude">
+      <input type="text" class="form-control" id="posiOrigenLng" placeholder="Current: Longitude">
     </div>
     <div class="form-group">
-      <input type="text" class="form-control" id="posiDestinoLat" placeholder="Destino : Latitude">
-      <input type="text" class="form-control" id="posiDestinoLng" placeholder="Destino : Longitude">
+      <input type="text" class="form-control" id="posiDestinoLat" placeholder="Destination : Latitude">
+      <input type="text" class="form-control" id="posiDestinoLng" placeholder="Destination : Longitude">
     </div>
 
     <button class="btn btn-success" id="buttonDistanceMatrix">Display</button>
