--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 
 <body>
 
+  <h1>places autocomplete testing</h1>
+  <input type="text" id="location" name="location" placeholder="City or ZIP code">
+  <input type="submit" value="GO" id="go">
+  <span class="zip"></span>
+  
   <div class="panel-footer">
     <p>Created by Stewart ilondanga <em>copyright 2017</em></p>
   </div>
