--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 
 <body>
 
+  <h1>say hi to the world</h1>
   <h1>places autocomplete testing</h1>
   <input type="text" id="location" name="location" placeholder="City or ZIP code">
   <input type="submit" value="GO" id="go">
   <span class="zip"></span>
-  
+
   <div class="panel-footer">
     <p>Created by Stewart ilondanga <em>copyright 2017</em></p>
   </div>
